# older_projects

./: README
duplinker/: CMakeLists.txt
duplinker/src/: CMakeLists.txt  main.c
nvzpf/: makefile  makefile.win  nvzpf.map
nvzpf/lvls/: stag1.txt
nvzpf/src/: aiobject.d  camera.d  dynamicobject.d  eventobject.d  fps.d  gameobjects.d  gameworld.d  gfx_id.d  graphics.d  graphicsmanager.d  input.d  main.d  manager.d  ninja.d  sdl.d  state.d  state_base.d  statedead.d  stategame.d  stategotstars.d  statemainmenu.d  statemanager.d  statepause.d  statestageexit.d  staticobject.d
officezombie/: CMakeLists.txt  README  TIMELINE
officezombie/cmake_modules/: FindSFML.cmake
officezombie/data/module/: player.txt
officezombie/data/module/animations/: 1001.txt  box.txt  ceo.txt  chair.txt  chef.txt  event.txt  female.txt  file.txt  man1.txt  puzzle.txt  table.txt  zombie_green.txt  zombie_red.txt
officezombie/data/module/events/: events.txt
officezombie/data/module/game/: gameui.txt
officezombie/data/module/maps/: ceooffice.csv  lunchroom.csv  office.csv  warehouse.csv
officezombie/data/module/menus/: 100000000.txt  200000000.txt  300000000.txt  400.txt  450.txt  mouse.txt
officezombie/data/module/movables/: box.txt  ceo.txt  chair.txt  chef.txt  event.txt  female.txt  file.txt  man1.txt  puzzle.txt  zombie_green.txt  zombie_red.txt
officezombie/officezombie.app/Contents/: Info.plist
officezombie/oz/: CMakeLists.txt  animation.cpp  animation.h  box.cpp  box.h  core.h  defaults.h  engine.cpp  engine.h  error.cpp  error.h  evemt.cpp  event.h  filefunc.cpp  filefunc.h  fmacs.h  gamedata.cpp  gamedata.h  gfx.cpp  gfx.h  images.cpp  images.h  inireader.cpp  inireader.h  input.cpp  input.h  map.cpp  map.h  mod_resource.cpp  mod_resource.h  movable.cpp  movable.h  movablenode.h  npc.cpp  npc.h  oz.cpp  pack.cpp  pack.h  player.cpp  player.h  (+32 more)
officezombie/packer/: CMakeLists.txt  config.cpp  config.h  error.cpp  error.h  filefunc.cpp  filefunc.h  hash.cpp  hash.h  map.cpp  map.h  packer.cpp  stdtype.h  strfunc.cpp  strfunc.h
officezombie/possible_images/: convert.sh
static_rt/: CMakeLists.txt
static_rt/src/: CMakeLists.txt  camera.d  image.d  main.d  matrix.d  onb.d  ray.d  raytrace.d  shape.d  vector.d
uLabManager/: addclientdialog.cpp  addclientdialog.hpp  addclientdialog.ui  main.cpp  uLabManager.pro  ulmmainwindow.cpp  ulmmainwindow.hpp  ulmmainwindow.ui
wormy/: .gitignore  makefile  test  test.d
wormy/SFMLTEST/: CMakeLists.txt  test.cpp
wormy/SFMLTEST/cmake_modules/: FindSFML.cmake
wormy/src/: core.d  death.d  fps.d  game.d  graphics.d  main.d  menu.d  pause.d  sdl.d  sound.d  state.d  state_base.d  statemanager.d  window.d  worm.d
(+8 files in other folders)
